# KerrTrace

./: .gitignore  AGENTS.md  Cargo.toml  README.md  black_hole.py  check.ps1  config.yaml
cuda/: kernel.cu  kerr.cuh  kerr_math.cuh  kerr_trace.cuh
docs/: dormand_prince_extended_tableau.md
src/: __init__.py  app.rs  blackbody.py  blackbody.rs  camera.py  camera.rs  config.py  config.rs  hud.rs  main.rs  math.rs  renderer.py  renderer.rs
src/app/: input.rs
src/hud/: glyphs.rs  mod.rs
src/renderer/: blackbody.rs  init.rs  mod.rs  texture.rs  utils.rs
