[package]
name = "KerrTrace"
version = "0.0.0"
edition = "2024"

[dependencies]
cudarc = { version = "*", features = ["cuda-version-from-build-system"] }
winit = { version = "*", features = ["rwh_06"] }
softbuffer = { version = "*", features = ["x11", "wayland"] }
serde = { version = "*", features = ["derive"] }
serde_yaml = { package = "serde_yaml_ng", version = "*" }
anyhow = "*"
glam = "*"
bytemuck = { version = "*", features = ["derive"] }
log = "*"
env_logger = "*"
image = { version = "*", default-features = false, features = ["png"] }

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
