[package]
name = "KerrTrace"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "*"
cudarc = { version = "*", features = ["cuda-version-from-build-system"] }
env_logger = "*"
glam = "*"
image = { version = "*", default-features = false, features = ["png"] }
log = "*"
serde = { version = "*", features = ["derive"] }
serde_yaml = { package = "serde_yaml_ng", version = "*" }
softbuffer = { version = "*", features = ["x11", "wayland"] }
winit = { version = "*", features = ["rwh_06"] }

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
